# Denk-PlusPlus

./: .gitignore  CMakeLists.txt  README.md  package-lock.json
DenkPlusPlus/: PlayGround.cpp  RootMain.cpp  keys.txt  main.cpp  output.txt
DenkPlusPlus/DataTypes/: DataTypes.h  UniversalData.h
DenkPlusPlus/Kenny/: KennyPlusPlus.cpp  KennyPlusPlus.h
DenkPlusPlus/Protocols/: Decrypt.cpp  Encrypt.cpp  Protocols.h
DenkPlusPlus/Protocols/DataTypes/: DataTypes.h  UniversalData.h
